# api/docs/swagger.json
@@ -4,6 +4,34 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/Vender": {
+            "get": {
+                "description": "Get vender details by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "vender_no",
+                        "name": "vender_no",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Vender"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/center": {
             "get": {
                 "description": "Get center details by ID",
@@ -68,6 +96,17 @@
                     "type": "string"
                 },
                 "center_no": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Vender": {
+            "type": "object",
+            "properties": {
+                "sire_name": {
+                    "type": "string"
+                },
+                "sire_no": {
                     "type": "string"
                 }
             }
